# focuscube

./: TGGS.joblib  focuscube.code-workspace
focus_cube_controller/: .gitignore  platformio.ini
focus_cube_controller/include/: config.h
focus_cube_controller/src/: main.cpp  oled.c  oled.h
rpi_gateway/: .gitignore  app.py  config.py  main.py  mqtt_handler.py  pyproject.toml  test_model.py
rpi_gateway/config/: gateway.toml
rpi_gateway/model/: TGGS.joblib
rpi_gateway/src/gateway/: app.py  cli.py  config.py  focus_engine.py  logging_setup.py  metrics.py  models.py  mqtt_bridge.py  predictor.py  service.py  state.py  topic_parser.py
rpi_gateway/src/rpi_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rpi_gateway/static/: style.css
rpi_gateway/templates/: index.html
