[project]
name = "rpi-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
