[project]
name = "rpi-gateway"
version = "0.1.0"
description = "FocusCube RPi Gateway — MQTT bridge + REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "xgboost>=3.2.0",
]

[project.scripts]
rpi-gateway = "gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
